# vm

./: .codecov.yml  .gitignore  .gitmodules  .jscpd.json  00_PROPOSAL_SETUP_VALIDATION.md  00_cold_start.md  00_cold_start_test.md  00_testing_plan.md  01_DB_PERSISTENCE.md  01_critical_bugs.md  01_documentation_updates.md  01a_bug_postgresql_startup_hang.md  01b_critical_bugs.md  02a_documentation_updates.md  02b_code_quality.md  03_testing_infrastructure.md  04_ci_cd_improvements.md  05_ux_temp_vm_auto_create.md  06_bug_postgresql_startup_hang.md  06a_security_defaults.proposal.md  06b_host_integration_defaults.proposal.md  07_proposal_temp_vm_auto_create.md  10_PROPOSAL_RAND_0.9_UPGRADE.md  11_PROPOSAL_E2E_WORKFLOW_VALIDATION.md  11_WORKTREE_REMOUNT_PROPOSAL.md  12_PROPOSAL_FIX_SSH_COMMAND_EXECUTION.md  13_PROPOSAL_FIX_PORT_FORWARDING.md  14_PROPOSAL_IMPROVE_LOGGING_AND_OUTPUT.md  15_PROPOSAL_COMPLETE_BEGINNER_ONBOARDING.md  15_PROPOSAL_CONFIG_RELIABILITY_IMPROVEMENTS.md  16_PROPOSAL_QUICK_START_DEVELOPER_ONBOARDING.md  17_PROPOSAL_CICD_AUTOMATED_ONBOARDING.md  18_PROPOSAL_DOCS_AUDIT_AND_ACCURACY.md  19_PROPOSAL_SHARED_DATABASE_SERVICES.md  AGENTS.md  BUG_REPORT.md  BUG_REPORT_SNAPSHOT_DOCKERFILE.md  CHANGELOG.md  CLAUDE.md  CLI.md  (+123 more)
rust/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  PROPOSAL_VM_CONFIG.md  PROPOSAL_VM_LINKS.md  PROPOSAL_VM_PORTS.md  README.md  build.sh  clippy.toml  deny.toml  package.json  tarpaulin-report.html  test_path.rs
rust/.cargo/: config.toml
rust/docs/user-guide/: api.md
rust/tests/: integration_tests.rs
rust/version-sync/: Cargo.toml
rust/version-sync/src/: main.rs
rust/vm/: Cargo.toml
rust/vm-api/: Cargo.toml  README.md
rust/vm-api/src/: api_docs.rs  auth.rs  config.rs  error.rs  janitor.rs  lib.rs  main.rs  provisioner.rs  state.rs
rust/vm-api/static/: index.html
rust/vm-api/tests/: api_test.rs  auth_test.rs  janitor_test.rs  provisioner_test.rs
rust/vm-auth-proxy/: Cargo.toml
rust/vm-auth-proxy/src/: client_ops.rs  crypto.rs  lib.rs  server.rs  storage.rs  types.rs
rust/vm-cli/: Cargo.toml
rust/vm-cli/src/: builder.rs  lib.rs  macros.rs
rust/vm-common/: Cargo.toml
rust/vm-common/examples/: enhanced_logging_demo.rs  tracing_demo.rs
rust/vm-common/src/: command_stream.rs  error_messages.rs  error_traits.rs  file_system.rs  lib.rs  log_context.rs  logging.rs  module_logger.rs  output_macros.rs  platform.rs  security.rs  structured_log.rs  system_check.rs  tracing_init.rs  user_paths.rs  yaml_utils.rs
rust/vm-common/tests/: enhanced_logging_tests.rs  tracing_tests.rs
rust/vm-config/: Cargo.toml  config.yaml  vm.yaml
rust/vm-config/examples/: benchmark_preset_cache.rs  trace_presets.rs
rust/vm-config/src/: cli.rs  config.rs  config_ops.rs  config_tests.rs  embedded_presets.rs  global_config.rs  global_config_tests.rs  lib.rs  limit_parser.rs  loader.rs  main.rs  merge.rs  os_detection.rs  paths.rs  preset.rs  preset_cache.rs  resources.rs  schema.rs  test_memory.rs  validate.rs  validator.rs  yaml_ops.rs
rust/vm-config/tests/: cli_query_output_tests.rs  config_ops_tests.rs  migrate_tests.rs  port_allocation.rs  preset_cache_test.rs  preset_integration_test.rs  yaml_error_diagnostics_test.rs
rust/vm-core/: Cargo.toml
rust/vm-core/src/: command_stream.rs  error.rs  file_system.rs  lib.rs  message.rs  output_macros.rs  platform.rs  project.rs  prompts.rs  secrets.rs  system_check.rs  temp_dir.rs  user_paths.rs  validation.rs
rust/vm-detector/: Cargo.toml
rust/vm-detector/src/: lib.rs  main.rs  os.rs  presets.rs  tools.rs
rust/vm-docker-registry/: Cargo.toml  README.md
rust/vm-docker-registry/src/: auto_manager.rs  client_ops.rs  config.rs  docker_config.rs  lib.rs  server.rs  types.rs
rust/vm-docker-registry/tests/: docker_integration_tests.rs  garbage_collection_tests.rs  pull_through_tests.rs
rust/vm-generator/: Cargo.toml
rust/vm-generator/src/: main.rs
rust/vm-installer/: Cargo.toml
rust/vm-installer/src/: cli.rs  dependencies.rs  installer.rs  lib.rs  main.rs  platform.rs  prompt.rs
rust/vm-installer/tests/: dependency_check_tests.rs  install_workflow_tests.rs  path_update_tests.rs  platform_detection_tests.rs
rust/vm-links/: Cargo.toml
rust/vm-links/src/: cargo.rs  main.rs  npm.rs  pip.rs
rust/vm-links/tests/: integration_tests.rs
rust/vm-logging/: Cargo.toml  src.rs
rust/vm-logging/src/: lib.rs
rust/vm-messages/: Cargo.toml
rust/vm-messages/src/: builder.rs  categories.rs  errors.rs  lib.rs  messages.rs
rust/vm-orchestrator/: Cargo.toml
rust/vm-orchestrator/migrations/: 20250116000001_initial.sql  20250116000002_add_provider_fields.sql  20250117000003_add_snapshots.sql
rust/vm-orchestrator/src/: db.rs  error.rs  lib.rs  operation.rs  test_utils.rs  workspace.rs
rust/vm-orchestrator/tests/: integration_test.rs
rust/vm-package-manager/: Cargo.toml  README.md
rust/vm-package-manager/src/: cli.rs  installer.rs  link_detector.rs  main.rs  package_manager.rs
rust/vm-package-manager/tests/: links_integration_tests.rs
rust/vm-package-server/: .dockerignore  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  config.json  install.sh  rustfmt.toml
rust/vm-package-server/docker/: setup-client.sh
rust/vm-package-server/docs/: CONTRIBUTING.md  api-reference.md  cli-reference.md  configuration.md  quickstart.md
rust/vm-package-server/src/: api.rs  auth.rs  cargo.rs  cli.rs  client_ops.rs  config.rs  deletion.rs  docker_manager.rs  error.rs  hash_utils.rs  lib.rs  live_reload.rs  local_storage.rs  main.rs  npm.rs  package_utils.rs  pypi.rs  pypi_utils.rs  registry_trait.rs  server.rs  simple_config.rs  state.rs  storage.rs  types.rs  ui.rs  upstream.rs  user_config.rs  utils.rs  validation.rs  validation_utils.rs  wrapper.rs
rust/vm-package-server/static/: index.html  style.css  upload.js
rust/vm-pkg/: Cargo.toml  README.md
rust/vm-pkg/src/: cli.rs  (+4 more)
rust/vm-platform/: Cargo.toml
rust/vm-plugin/: Cargo.toml
rust/vm-ports/: Cargo.toml
rust/vm-provider/: Cargo.toml
rust/vm-snapshot/: Cargo.toml
rust/vm-temp/: Cargo.toml
(+661 files in other folders)
