[workspace]
members = [
    "vm-core",
    "vm-config",
    "vm-package-manager",
    "vm-platform",
    "vm-plugin",
    "vm-provider",
    "vm-temp",
    "vm",
    "vm-installer",
    "vm-messages",
    "vm-cli",
    "version-sync",
    "vm-package-server",
    "vm-auth-proxy",
    "vm-docker-registry", "vm-logging", "vm-orchestrator",
]
exclude = [
    "vm-package-server/tests/__fixtures__",
]
resolver = "2"

[workspace.package]
version = "4.3.0"
edition = "2021"
publish = false
authors = ["Goobits VM Contributors"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml_ng = "0.10"
clap = { version = "4.5.11", features = ["derive"] }
clap_complete = "4.5"
anyhow = "1.0.82"
thiserror = "2.0"
indexmap = { version = "2.0", features = ["serde"] }
regex = "1.10.5"
tera = "1.20"
which = "8.0"
duct = "0.13.6"
indicatif = "0.18"
rayon = "1.10"
walkdir = "2"
glob = "0.3.1"
tempfile = "3.10.1"
dirs = "6.0"
chrono = { version = "0.4.38", features = ["serde"] }
base64 = "0.22.1"
fs2 = "0.4"
pathdiff = "0.2"
colored = "2.1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
sysinfo = "0.30.13"
axum = { version = "0.8", features = ["multipart", "ws"] }
tokio = { version = "1.47", features = ["net", "rt-multi-thread", "macros", "fs", "process"] }
aes-gcm = "0.10"
pbkdf2 = "0.12.2"
rand = "0.9"
sha1 = "0.10.6"
sha2 = "0.10.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter", "json"] }
tower-http = { version = "0.6", features = ["trace", "fs"] }
askama = "0.12.1"
reqwest = { version = "0.12.23", features = ["blocking", "json", "multipart", "rustls-tls", "stream"], default-features = false }
url = "2.5.2"
bytes = "1.6.1"
dialoguer = "0.11"
once_cell = "1.21"
notify = { version = "8.2", features = ["crossbeam-channel"] }
futures-util = "0.3.31"
nix = { version = "0.29", features = ["user"] }
log = "0.4.22"
shellexpand = "1.1"
git2 = "0.19.0"
num_cpus = "1.16"


[profile.release]
opt-level = 3
lto = "fat"           # More aggressive LTO across all dependencies
codegen-units = 1
strip = true
panic = "abort"       # Smaller binary, faster panic handling

[profile.dev]
opt-level = 1
incremental = true
debug = 1
codegen-units = 16

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true
