[workspace]
members = [
    # Foundation Layer
    "vm-core",
    "vm-messages",
    "vm-logging",

    # Configuration Layer
    "vm-config",
    "vm-plugin",

    # Utility Layer
    "vm-platform",
    "vm-package-manager",

    # Provider Layer
    "vm-provider",
    "vm-temp",
    "vm-snapshot",

    # Application Layer
    "vm",
    "vm-cli",
    "vm-installer",

    # Service Layer
    "vm-package-server",
    "vm-auth-proxy",
    "vm-docker-registry",

    # Tooling
    "version-sync",
]
exclude = [
    "vm-package-server/tests/__fixtures__",
]
resolver = "2"

[workspace.package]
version = "4.8.3"
edition = "2021"
publish = false
authors = ["Goobits VM Contributors"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6"
anyhow = "1.0.102"
thiserror = "2.0"
indexmap = { version = "2.14", features = ["serde"] }
regex = "1.12.3"
tera = "1.20"
which = "8.0"
duct = "0.13.7"
indicatif = "0.18"
rayon = "1.12"
walkdir = "2"
glob = "0.3.3"
tempfile = "3.27.0"
dirs = "6.0"
chrono = { version = "0.4.44", features = ["serde"] }
base64 = "0.22.1"
fs2 = "0.4"
pathdiff = "0.2"
colored = "2.2.0"
uuid = { version = "1.23", features = ["v4", "serde"] }
sysinfo = "0.30.13"
axum = { version = "0.8", features = ["multipart", "ws"] }
tokio = { version = "1.52", features = ["net", "rt-multi-thread", "macros", "fs", "process"] }
aes-gcm = "0.10"
pbkdf2 = "0.12.2"
rand = "0.9"
sha1 = "0.10.6"
sha2 = "0.10.9"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter", "json"] }
tower-http = { version = "0.6", features = ["trace", "fs"] }
askama = "0.12.1"
reqwest = { version = "0.12.28", features = ["blocking", "json", "multipart", "rustls-tls", "stream"], default-features = false }
url = "2.5.8"
bytes = "1.11.1"
dialoguer = "0.11"
once_cell = "1.21"
notify = { version = "8.2", features = ["crossbeam-channel"] }
futures-util = "0.3.32"
nix = { version = "0.29", features = ["user"] }
log = "0.4.29"
shellexpand = "3.1.2"
git2 = "0.20.4"
num_cpus = "1.17"


[profile.release]
opt-level = 3
lto = "fat"           # More aggressive LTO across all dependencies
codegen-units = 1
strip = true
panic = "abort"       # Smaller binary, faster panic handling

[profile.source-install]
inherits = "release"
lto = "thin"
codegen-units = 16

[profile.dev]
opt-level = 1
incremental = true
debug = 1
codegen-units = 16

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true
