[package]
name = "version-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Version synchronization tool for VM project"

[[bin]]
name = "version-sync"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
clap = { workspace = true }