[package]
name = "vm-api"
version = "4.3.0"
edition = "2021"

[[bin]]
name = "vm-api"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }

# Internal crates
vm-core = { path = "../vm-core", version = "4.3.0" }
vm-orchestrator = { path = "../vm-orchestrator", version = "4.3.0" }

[dev-dependencies]
axum-test = "16"
