[package]
name = "vm-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Common utilities and types for VM Tool"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
log = { workspace = true }
pathdiff = { workspace = true }
chrono = { workspace = true }
is-terminal = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }

[features]
default = []
structured-output = []
