[package]
name = "vm-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Common utilities and types for VM Tool"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
pathdiff = { workspace = true }
chrono = { workspace = true }
is-terminal = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
vm-messages = { path = "../vm-messages" }
vm-platform = { path = "../vm-platform" }
duct = { workspace = true }
which = { workspace = true }
sysinfo = { workspace = true }

[features]
default = ["test-helpers"]
structured-output = []
test-helpers = []

[package.metadata.cargo-machete]
ignored = [
    "dirs",        # Used transitively by multiple crates
    "is-terminal", # Used transitively by terminal output logic
    "thiserror",   # Used transitively for error handling
    "uuid"         # Used transitively for ID generation
]
