[package]
name = "vm-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-performance YAML configuration processor for VM Tool"

[lib]
name = "vm_config"
path = "src/lib.rs"

[[bin]]
name = "vm-config"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
glob = { workspace = true }
indexmap = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
vm-common = { path = "../vm-common" }
vm-messages = { path = "../vm-messages" }
which = { workspace = true }
fs2 = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[features]
default = []
structured-output = ["vm-common/structured-output"]

[dev-dependencies]
tempfile = { workspace = true }
