[package]
name = "vm-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-performance YAML configuration processor for VM Tool"

[lib]
name = "vm_config"
path = "src/lib.rs"

[[bin]]
name = "vm-config"
path = "src/main.rs"

[dependencies]
tracing = { workspace = true }
clap = { workspace = true }
fs2 = { workspace = true }
glob = { workspace = true }
indexmap = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
vm-core = { path = "../vm-core" }
vm-messages = { path = "../vm-messages" }
vm-cli = { path = "../vm-cli" }
vm-plugin = { path = "../vm-plugin" }
which = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[features]
default = []
structured-output = []
test-helpers = []

[dev-dependencies]
tempfile = { workspace = true }
