[package]
name = "vm-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-performance YAML configuration processor for VM Tool"

[lib]
name = "vm_config"
path = "src/lib.rs"

[[bin]]
name = "vm-config"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
sysinfo = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
clap = { workspace = true }
fs2 = { workspace =true }
glob = { workspace = true }
indexmap = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
vm-core = { path = "../vm-core" }
vm-messages = { path = "../vm-messages" }
vm-cli = { path = "../vm-cli" }
vm-plugin = { path = "../vm-plugin" }
vm-logging = { path = "../vm-logging" }
which = { workspace = true }
chrono = { workspace = true }
git2 = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[features]
default = []
structured-output = []
test-helpers = []

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = "2.0"
predicates = "3.0"
tracing-subscriber = { workspace = true }
serial_test = "3.2"
