[package]
name = "vm-core"
version.workspace = true
edition.workspace = true

[dependencies]
tracing = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
duct = { workspace = true }
which = { workspace = true }
tempfile = { workspace = true }
pathdiff = { workspace = true }
sysinfo = { workspace = true }
vm-messages = { path = "../vm-messages" }
vm-platform = { path = "../vm-platform" }