[package]
name = "vm-detector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }
anyhow = { workspace = true }
glob = { workspace = true }
vm-common = { path = "../vm-common" }

[dev-dependencies]
tempfile = { workspace = true }
