[package]
name = "vm-detector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde_json = { workspace = true }
which = { workspace = true }
anyhow = { workspace = true }
glob = { workspace = true }
vm-common = { path = "../vm-common" }

[dev-dependencies]
tempfile = { workspace = true }
