[package]
name = "vm-docker-registry"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "vm_docker_registry"
path = "src/lib.rs"

[dependencies]
# Core
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Docker integration
duct = { workspace = true }
which = { workspace = true }

# File operations
dirs = { workspace = true }
fs2 = { workspace = true }

# User interaction
dialoguer = { workspace = true }
colored = { workspace = true }

# HTTP client for health checks
reqwest = { workspace = true }

# Utilities
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Template engine for config generation
tera = { workspace = true }

# Async runtime
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }