[package]
name = "vm-docker-registry"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "vm_docker_registry"
path = "src/lib.rs"

[dependencies]
# Core
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Docker integration
duct = { workspace = true }
which = { workspace = true }

# File operations
dirs = { workspace = true }

# HTTP client for health checks
reqwest = { workspace = true }

# Utilities
tracing = { workspace = true }
chrono = { workspace = true }

# Template engine for config generation
tera = { workspace = true }

# Async runtime
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4.4"

[features]
default = []
integration = []
