[package]
name = "vm-installer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Installer for the VM development tool."

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
which = { workspace = true }
vm-common = { path = "../vm-common" }
vm-platform = { path = "../vm-platform" }

[dev-dependencies]
tempfile = "3.22"

[features]
default = []
structured-output = ["vm-common/structured-output"]

[package.metadata.cargo-machete]
ignored = ["serde_json"]
