[package]
name = "vm-installer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Installer for the VM development tool."

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
which = { workspace = true }
vm-common = { path = "../vm-common" }
vm-messages = { path = "../vm-messages" }
vm-cli = { path = "../vm-cli" }
vm-platform = { path = "../vm-platform" }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
structured-output = ["vm-common/structured-output"]

[package.metadata.cargo-machete]
ignored = ["serde_json"]
