[package]
name = "vm-installer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Installer for the VM development tool."

[dependencies]
clap = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
vm-messages = { path = "../vm-messages" }
vm-cli = { path = "../vm-cli" }
vm-core = { path = "../vm-core" }
vm-logging = { path = "../vm-logging" }
vm-platform = { path = "../vm-platform" }

[dev-dependencies]
tempfile = { workspace = true }
anyhow = { workspace = true }

[features]
default = []
structured-output = []
integration = []

[package.metadata.cargo-machete]
ignored = ["serde_json"]
