[package]
name = "vm-links"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Package link detection for VM Tool"

[dependencies]
vm-common = { path = "../vm-common" }
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rayon = "1.10"
walkdir = "2.5"