[package]
name = "vm-logging"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
