[package]
name = "vm-orchestrator"
version = "4.3.0"
edition = "2021"

[dependencies]
# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID for workspace IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

# Internal crates
vm-core = { path = "../vm-core", version = "4.3.0" }
vm-config = { path = "../vm-config", version = "4.3.0" }
vm-provider = { path = "../vm-provider", version = "4.3.0" }

[dev-dependencies]
tokio-test = "0.4"
