[package]
name = "vm-package-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Unified package manager for VM Tool - handles cargo, npm, and pip/pipx packages"

[dependencies]
clap = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
vm-config = { path = "../vm-config" }
vm-messages = { path = "../vm-messages" }
vm-core = { path = "../vm-core" }
vm-cli = { path = "../vm-cli" }
vm-platform = { path = "../vm-platform" }
rayon = { workspace = true }
regex = { workspace = true }
which = { workspace = true }

[features]
default = []
structured-output = []

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "vm-package-manager"
path = "src/main.rs"
