[package]
name = "vm-package-server"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "vm_package_server"
path = "src/lib.rs"

[features]
default = []
standalone-binary = []
cargo-tests = []

[[bin]]
name = "pkg-server"
path = "src/main.rs"
required-features = ["standalone-binary"]

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
askama = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
which = { workspace = true }
indicatif = { workspace = true }
colored = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
dialoguer = { workspace = true }
once_cell = { workspace = true }
notify = { workspace = true }
futures-util = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
axum-test = "18.1"
