[package]
name = "vm-pkg"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Unified package manager for VM Tool - handles cargo, npm, and pip/pipx packages"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
which = { workspace = true }
home = { workspace = true }
tempfile = { workspace = true }
vm-detector = { path = "../vm-detector" }
vm-common = { path = "../vm-common" }
rayon = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }

[features]
default = []
structured-output = ["vm-common/structured-output"]

[dev-dependencies]

[[bin]]
name = "vm-pkg"
path = "src/main.rs"