[package]
name = "vm-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Plugin system for VM tool"

[lib]
name = "vm_plugin"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
vm-platform = { path = "../vm-platform" }

[dev-dependencies]
tempfile = { workspace = true }