[package]
name = "vm-ports"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Port range management for VM Tool"

[dependencies]
vm-common = { path = "../vm-common" }
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.10"