[package]
name = "vm-ports"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Port range management for VM Tool"

[lib]
name = "vm_ports"
path = "src/lib.rs"

[[bin]]
name = "vm-ports"
path = "src/main.rs"

[dependencies]
vm-common = { path = "../vm-common" }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
structured-output = ["vm-common/structured-output"]

[dev-dependencies]
tempfile = { workspace = true }