[package]
name = "vm-provider"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tracing = { workspace = true }
duct = { workspace = true }
indicatif = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tera = { workspace = true }
vm-core = { path = "../vm-core" }
vm-config = { path = "../vm-config" }
vm-cli = { path = "../vm-cli" }
vm-messages = { path = "../vm-messages" }
vm-platform = { path = "../vm-platform" }
chrono = { workspace = true }
rayon = { workspace = true }
shellexpand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
uuid = { version = "1.8.0", features = ["v4"] }

[features]
default = ["docker"]
docker = []
vagrant = []
tart = []
structured-output = []
test-helpers = ["vm-config/test-helpers"]
