[package]
name = "vm-provider"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tracing = { workspace = true }
duct = { workspace = true }
indicatif = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
tera = { workspace = true }
vm-core = { path = "../vm-core" }
vm-config = { path = "../vm-config" }
vm-cli = { path = "../vm-cli" }
vm-messages = { path = "../vm-messages" }
vm-platform = { path = "../vm-platform" }
chrono = { workspace = true }
rayon = { workspace = true }
shellexpand = { workspace = true }
tokio = { workspace = true, features = ["time", "rt"] }
uuid = { version = "1.19.0", features = ["v4"] }

[dev-dependencies]
tempfile = { workspace = true }
indexmap = { workspace = true }

[features]
default = ["docker"]
docker = []
tart = []
structured-output = []
test-helpers = ["vm-config/test-helpers"]
