[package]
name = "vm-provider"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tracing = { workspace = true }
duct = { workspace = true }
indicatif = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
tera = { workspace = true }
sha2 = { workspace = true }
vm-core = { path = "../vm-core" }
vm-config = { path = "../vm-config" }
vm-cli = { path = "../vm-cli" }
vm-messages = { path = "../vm-messages" }
vm-platform = { path = "../vm-platform" }
vm-snapshot = { path = "../vm-snapshot" }
chrono = { workspace = true }
rayon = { workspace = true }
shellexpand = { workspace = true }
tokio = { workspace = true, features = ["time", "rt"] }
uuid = { version = "1.23.1", features = ["v4"] }
base64 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
indexmap = { workspace = true }

[features]
default = ["docker"]
docker = []
tart = []
structured-output = []
test-helpers = ["vm-config/test-helpers"]
