[package]
name = "vm-temp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
vm-provider = { path = "../vm-provider" }
vm-common = { path = "../vm-common" }

dirs = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
vm-config = { path = "../vm-config" }
tempfile = { workspace = true }
fs2 = { workspace = true }
is-terminal = { workspace = true }

[features]
default = []
structured-output = ["vm-common/structured-output"]

[dev-dependencies]