[package]
name = "vm-temp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
vm-provider = { path = "../vm-provider" }
vm-common = { path = "../vm-common" }
vm-platform = { path = "../vm-platform" }

dirs = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
vm-config = { path = "../vm-config" }
tempfile = { workspace = true }
fs2 = { workspace = true }
is-terminal = { workspace = true }

[features]
default = []
structured-output = ["vm-common/structured-output"]

[package.metadata.cargo-machete]
ignored = [
    "is-terminal", # Used transitively in terminal operations
    "serde"        # Used transitively via serde_yaml_ng and state serialization
]

[dev-dependencies]