[package]
name = "vm-temp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
vm-provider = { path = "../vm-provider" }
vm-platform = { path = "../vm-platform" }
vm-core = { path = "../vm-core" }
vm-cli = { path = "../vm-cli" }
vm-messages = { path = "../vm-messages" }

thiserror = { workspace = true }
clap = { workspace = true }
vm-config = { path = "../vm-config" }
atty = { workspace = true }
fs2 = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
structured-output = []

[package.metadata.cargo-machete]
ignored = [
    "atty", # Used transitively in terminal operations
    "serde"        # Used transitively via serde_yaml_ng and state serialization
]

[dev-dependencies]
