[package]
name = "vm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
dialoguer = { workspace = true }
sysinfo = { workspace = true, features = ["serde"] }
vm-core = { path = "../vm-core" }
vm-logging = { path = "../vm-logging" }
vm-messages = { path = "../vm-messages" }
vm-cli = { path = "../vm-cli" }
vm-config = { path = "../vm-config" }
vm-platform = { path = "../vm-platform" }
vm-plugin = { path = "../vm-plugin" }
vm-provider = { path = "../vm-provider" }
vm-temp = { path = "../vm-temp" }
vm-package-server = { path = "../vm-package-server" }
vm-auth-proxy = { path = "../vm-auth-proxy" }
vm-docker-registry = { path = "../vm-docker-registry" }
futures = "0.3.31"

[features]
default = []
structured-output = []

[package.metadata.cargo-machete]
ignored = []

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"